--- a/src/EC_ConfigurationManager/packages.config
+++ b/src/EC_ConfigurationManager/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.8" targetFramework="net46" developmentDependency="true" />
   <package id="BepInEx.ConfigurationManager" version="18.2.1" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.Assembly-CSharp" version="2019.6.6.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.IL" version="2019.6.6.4" targetFramework="net46" developmentDependency="true" />
