--- a/src/HS2_InputUnlocker/packages.config
+++ b/src/HS2_InputUnlocker/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.8" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
