--- a/src/HS_ConfigurationManager/packages.config
+++ b/src/HS_ConfigurationManager/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.8" targetFramework="net35" developmentDependency="true" />
   <package id="BepInEx.ConfigurationManager" version="18.2.1" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net35" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.4" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect.Assembly-CSharp" version="2017.6.30.2" targetFramework="net35" developmentDependency="true" />
