--- a/src/SVS_BGMLoader/SVS_BGMLoader.csproj
+++ b/src/SVS_BGMLoader/SVS_BGMLoader.csproj
@@ -26,37 +26,37 @@
 
 	<ItemGroup>
 		<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.668">
-		  <ExcludeAssets>all</ExcludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>compile</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BepInEx.Unity.Mono.Preloader" Version="6.0.0-be.668">
-		  <ExcludeAssets>all</ExcludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>compile</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="IllusionLibs.SamabakeScramble.Assembly-CSharp" Version="2024.8.30.1">
-		  <ExcludeAssets>all</ExcludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>compile</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="IllusionLibs.SamabakeScramble.Il2Cppmscorlib" Version="2024.8.30.1">
-		  <ExcludeAssets>all</ExcludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>compile</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="IllusionLibs.SamabakeScramble.UnityEngine" Version="2021.3.33.1">
-		  <ExcludeAssets>all</ExcludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>compile</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="IllusionLibs.SamabakeScramble.UnityEngine.AudioModule" Version="2021.3.33.1">
-		  <ExcludeAssets>all</ExcludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>compile</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="IllusionLibs.SamabakeScramble.UnityEngine.UI" Version="2021.3.33.1">
-		  <ExcludeAssets>all</ExcludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>compile</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Unity.Analyzers" Version="1.25.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		  <ExcludeAssets>all</ExcludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
 
