--- a/src/AI_BGMLoader/packages.config
+++ b/src/AI_BGMLoader/packages.config
@@ -6,10 +6,10 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.AudioModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.UnityEngine.TextRenderingModule" version="2018.2.21.4" targetFramework="net46" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.TextRenderingModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UnityWebRequestWWWModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.25.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
