--- a/src/AI_InputUnlocker/packages.config
+++ b/src/AI_InputUnlocker/packages.config
@@ -3,7 +3,7 @@
   <package id="BepInEx.Analyzers" version="1.0.8" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.UnityEngine.TextRenderingModule" version="2018.2.21.4" targetFramework="net46" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.TextRenderingModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" developmentDependency="true" />
