--- a/src/AI_Screencap/packages.config
+++ b/src/AI_Screencap/packages.config
@@ -7,11 +7,11 @@
   <package id="IllusionLibs.AIGirl.Unity.Postprocessing.Runtime" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.AssetBundleModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.UnityEngine.ImageConversionModule" version="2018.2.21.4" targetFramework="net46" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.ImageConversionModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.ScreenCaptureModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.UnityEngine.TextRenderingModule" version="2018.2.21.4" targetFramework="net46" />
-  <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.4" targetFramework="net46" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.TextRenderingModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.25.0" targetFramework="net46" developmentDependency="true" />
