--- a/src/EC_ExtensibleSaveFormat_Patcher/packages.config
+++ b/src/EC_ExtensibleSaveFormat_Patcher/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx.Mono.Cecil" version="0.10.4.1" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.25.0" targetFramework="net46" developmentDependency="true" />
 </packages>
