--- a/src/EC_SliderUnlocker/packages.config
+++ b/src/EC_SliderUnlocker/packages.config
@@ -8,7 +8,7 @@
   <package id="IllusionLibs.EmotionCreators.TextMeshPro" version="2019.6.6.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.EmotionCreators.UnityEngine.TextRenderingModule" version="2017.4.24.4" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.TextRenderingModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.UI" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.25.0" targetFramework="net46" developmentDependency="true" />
 </packages>
