--- a/src/KKS_BGMLoader/packages.config
+++ b/src/KKS_BGMLoader/packages.config
@@ -9,7 +9,7 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.CoreModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.TextRenderingModule" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.TextRenderingModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UnityWebRequestWWWModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.18.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.25.0" targetFramework="net46" developmentDependency="true" />
