--- a/src/KKS_Screencap/packages.config
+++ b/src/KKS_Screencap/packages.config
@@ -4,7 +4,7 @@
   <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" version="2021.9.17" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.9.17" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" version="2021.9.17" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.Unity.Postprocessing.Runtime" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AssetBundleModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.AudioModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
@@ -14,6 +14,6 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.InputLegacyModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.ScreenCaptureModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.TextRenderingModule" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UI" version="2019.4.9" targetFramework="net46" />
+  <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UI" version="2019.4.9" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.25.0" targetFramework="net46" developmentDependency="true" />
 </packages>
